fix - connector no longer covers link

--- a/src/components/css/habit-card.scss
+++ b/src/components/css/habit-card.scss
@@ -20,6 +20,7 @@
 }
 
 .active-link-connector {
+  z-index: 0;
   margin: 0 -3rem 0 -3rem;
   min-width: 6rem;
   height: 1rem;
